[package]
name = "ivrigst"
version = "1.0.0"
authors = ["Soltvedt <luringens@protonmail.com>"]
edition = "2021"
license-file ="LICENSE.md"
readme = "README.md"
repository = "https://github.com/soluri/ivrigst/"
publish = false

[dependencies]
gl = "0.14.0"
sdl2 = { version = "0.35.2", features = ["bundled", "static-link"] }
anyhow = "1.0.58"
render_gl_derive = { path = "render_gl_derive" }
nalgebra = "0.31.1"
tobj = "3.2.3"
egui = "0.18.1"
notify = "4.0.17"
arboard = "2.1.1"
webbrowser = "0.7.1"

[build-dependencies]
walkdir = "2.3.2"
