[package]
name = "ivrigst"
version = "1.0.0"
authors = ["Soltvedt <luringens@protonmail.com>"]
edition = "2021"
license-file ="LICENSE.md"
readme = "README.md"
repository = "https://github.com/soluri/ivrigst/"
publish = false

[dependencies]
gl = "0.14.0"
sdl2 = { version = "0.35.2", features = ["bundled", "static-link"] }
anyhow = "1.0.69"
render_gl_derive = { path = "render_gl_derive" }
nalgebra = "0.32.2"
tobj = "3.2.4"
egui = "0.19.0"
notify = "5.1.0"
arboard = "3.2.0"
webbrowser = "0.8.7"

[build-dependencies]
walkdir = "2.3.3"
